--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   db:
+    container_name: courses_database
     image: postgres:latest
     environment:
       POSTGRES_USER: pgaccess
