preparing for deployment

--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,7 @@ DATABASE_USER = pgaccess
 DATABASE_PASSWORD = 1234
 DATABASE_NAME = courses
 DATABASE_PORT = 5432
+DATABASE_HOST=courses_database
 
 # JWT
 JWT_SECRET = ASAKDHFBJAHS&*ASD@NJK$JF@$%@FEVDT@VD
